# PEMesh

./: .gitignore  .gitmodules  README.md
src/: CMakeLists.txt  PEMesh.pro  addpointsdialog.cpp  addpointsdialog.h  addpointsdialog.ui  addpolygondialog.cpp  addpolygondialog.h  addpolygondialog.ui  aggregatedialog.cpp  aggregatedialog.h  aggregatedialog.ui  customizedchartview.cpp  customizedchartview.h  dataset.cpp  dataset.h  dataset_classes.h  datasetwidget.cpp  datasetwidget.h  datasetwidget.ui  geometrygeometryscatterplotswidget.cpp  geometrygeometryscatterplotswidget.h  geometrygeometryscatterplotswidget.ui  geometryperformancescatterplotswidget.cpp  geometryperformancescatterplotswidget.h  geometryperformancescatterplotswidget.ui  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  meshmetricsgraphicwidget.cpp  meshmetricsgraphicwidget.h  meshmetricsgraphicwidget.ui  meshmetricswidget.cpp  meshmetricswidget.h  meshmetricswidget.ui  parametricdatasetsettingsdialog.cpp  parametricdatasetsettingsdialog.h  parametricdatasetsettingsdialog.ui  pointsparametricdatasetsettingsdialog.ui  (+16 more)
src/meshes/: abstract_vem_element.cpp  abstract_vem_element.h  mesh_metrics.cpp  mesh_metrics.h  mirroring.cpp  mirroring.h  non_uniform_scaling_01.cpp  non_uniform_scaling_01.h  vem_elements.cpp  vem_elements.h
